--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="https://unpkg.com/@rive-app/canvas"></script>
     <script>
     const r = new rive.Rive({
-        src: '/haaland.riv',
+        src: 'haaland.riv',
         canvas: document.getElementById('canvas'),
         autoplay: true,
         layout: new rive.Layout({fit: 'contain', alignment: 'center'}),
