update src link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <script src="https://unpkg.com/@rive-app/canvas"></script>
     <script>
     const r = new rive.Rive({
-        src: 'haaland.riv',
+        // src: '/haaland.riv',
+        src: 'https://github.com/01000110/Haaland/raw/main/haaland.riv',
         canvas: document.getElementById('canvas'),
         autoplay: true,
         layout: new rive.Layout({fit: 'contain', alignment: 'center'}),
